--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Gửi lời yêu thương</title>
+<title>Gửi lời yêu thương đến nhau</title>
 <link rel="stylesheet" href="codetotinh.css" />
 </head>
 <body bgcolor="#000000">
